2015-11-20  Matthew Wahab  <matthew.wahab@arm.com>

	* gas/aarch64/virthostext-directive.d: New.
	* gas/aarch64/virthostext.d: New.
	* gas/aarch64/virthostext.s: New.

2015-06-03  Matthew Wahab  <matthew.wahab@arm.com>

	* gas/arm/armv8-a+rdma.d: New.
	* gas/arm/armv8-a+rdma.s: New.

2015-06-02  Matthew Wahab  <matthew.wahab@arm.com>

	* gas/arm/armv8-a+pan.d: New.
	* gas/arm/armv8-a+pan.s: New.

2015-06-02  Matthew Wahab  <matthew.wahab@arm.com>

	* gas/aarch64/rdma-directive.d: New.
	* gas/aarch64/rdma.d: New.
	* gas/aarch64/rdma.s: New.

2015-06-02  Matthew Wahab  <matthew.wahab@arm.com>

	* gas/aarch64/lor-directive.d: New.
	* gas/aarch64/lor.d: New.
	* gas/aarch64/lor.s: New

2015-06-01  Matthew Wahab  <matthew.wahab@arm.com>

	* gas/aarch64/pan-directive.d: New.
	* gas/aarch64/pan.d: New.
	* gas/aarch64/pan.s: New

2014-11-18  Jan Beulich  <jbeulich@suse.com>

	* gas/aarch64/crc32-directive.d: New.
	* gas/aarch64/crypto-directive.d: New.
	* gas/aarch64/crc32.s: Adjust to allow for directive use.
	* gas/aarch64/crypto.s: Likewise.

2015-03-10  Renlin Li  <renlin.li@arm.com>

	* gas/aarch64/ldst-reg-uns-imm.d: Adjust expected output.
	* gas/aarch64/ldst-reg-unscaled-imm.d: Likewise.
	* gas/aarch64/reloc-insn.d: Likewise.2015-03-10  Matthew Wahab  <matthew.wahab@arm.com>

2014-12-19  Matthew Fortune  <matthew.fortune@imgtec.com>

	* gas/mips/r6-64.s: Remove .align directives from LDPC
	instructions and add further tests for LDPC.
	* gas/mips/r6-64-n32.d: remove the NOPs from LDPC expected
	output and update for new tests.
	* gas/mips/r6-64-n64.d: Likewise.
	* gas/mips/ldpc-unalign.l: New file.
	* gas/mips/ldpc-unalign.s: Likewise.
	* gas/mips/mips.exp: Run ldpc-unalign test.

2014-12-19  Matthew Fortune  <matthew.fortune@imgtec.com>

	* gas/mips/r6.s: Test JALRC and NAL
	* gas/mips/r6-n32.d: Add expected output for JALRC and NAL.
	* gas/mips/r6-n64.d: Likewise.
	* gas/mips/r6.d: Likewise.

2014-11-30  Alan Modra  <amodra@gmail.com>
