@@ -1,3 +1,8 @@
+2015-11-27  Matthew Wahab  <matthew.wahab@arm.com>
+
+	* gas/aarch64/sysreg-2.d: New.
+	* gas/aarch64/sysreg-2.s: New.
+
 2015-11-20  Matthew Wahab  <matthew.wahab@arm.com>
 
 	* gas/aarch64/virthostext-directive.d: New.
